name:                jmacro-rpc-examples
version:             0.1.0.0
license-file:        LICENSE
author:              Aycan iRiCAN
maintainer:          iricanaycan@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable jmacro-rpc-examples
  main-is: Main.hs
  build-depends:       base, mtl, text, jmacro, jmacro-rpc, jmacro-rpc-snap, snap-server, snap-core, blaze-html
  default-language:    Haskell2010
